session-6/order-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: gopalbugad/order:latest
        ports:
        - containerPort: 8083
  selector:
    matchLabels:
      app: order
