session-6/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  type: NodePort
  ports:
  - port: 8083
    targetPort: 8083
    nodePort: 30004
